--- a/src/styles/quasar.variables.sass
+++ b/src/styles/quasar.variables.sass
@@ -1,7 +1,7 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   : #027BE3
+$primary   : #24292e
 $secondary : #26A69A
 $accent    : #9C27B0
 
