Small changes and menu rework

--- a/src/styles/mystyle.sass
+++ b/src/styles/mystyle.sass
@@ -16,11 +16,6 @@
     color: $blue-grey-6
     &:hover
       color: $light-blue-9
-.BG
-  &__gradient
-    background: #757F9A
-    background: -webkit-linear-gradient(to top, #D7DDE8, #757F9A)
-    background: linear-gradient(to top, #D7DDE8, #757F9A)
 .CNT
   &__eighty
     min-width: 80%
@@ -35,3 +30,7 @@
 .AR
   &__wide
     aspect-ratio: 16/9
+.BG
+  &__cardDark
+    background: grey
+    opacity: 0.3
