Components optimisation Design changes Mobile optimisation Gallery rework

--- a/src/styles/mystyle.sass
+++ b/src/styles/mystyle.sass
@@ -34,3 +34,8 @@
   &__cardDark
     background: grey
     opacity: 0.3
+  &__cardTop
+    background: $info
+    background: linear-gradient(90deg, $info 0%, $secondary 100%)
+.cardFit 
+  margin: 0.5em 0.9em 0.5em 0.9em
