--- a/src/styles/quasar.variables.sass
+++ b/src/styles/quasar.variables.sass
@@ -2,14 +2,14 @@
 // to match your app's branding.
 
 $primary   : #24292e
-$secondary : #26A69A
+$secondary : #252525a5
 $accent    : #797979a6
 
 $dark      : #1D1D1D
 
 $positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
+$negative  : #c4302b
+$info      : #1c1c1ca5
 $warning   : #F2C037
 
 @import '~quasar-variables-styl'
