--- a/src/styles/quasar.variables.sass
+++ b/src/styles/quasar.variables.sass
@@ -10,6 +10,6 @@ $dark      : #1D1D1D
 $positive  : #21BA45
 $negative  : #c4302b
 $info      : #1c1c1ca5
-$warning   : #F2C037
+$warning   : #d1d1d1
 
 @import '~quasar-variables-styl'
