New desktop look with recent request from client

--- a/src/styles/quasar.variables.sass
+++ b/src/styles/quasar.variables.sass
@@ -8,7 +8,7 @@ $accent    : #797979a6
 $dark      : #1D1D1D
 
 $positive  : #21BA45
-$negative  : #c4302b
+$negative  : #2b6dc4
 $info      : #1c1c1ca5
 $warning   : #d1d1d1
 
