Optimization & small changes Optimized images: size, alts and lazy loading Optimized embed video loading on demand

--- a/src/styles/mystyle.sass
+++ b/src/styles/mystyle.sass
@@ -50,13 +50,6 @@ body
   &__cardDark
     background: grey
     opacity: 0.3
-  &__cardTop
-    background: $info
-    background: linear-gradient(180deg, $info 0%, $secondary 100%)
-/* Special class for badly dehaved components */
-.cardFit 
-  margin: 0.5em 0.9em 0.5em 0.9em
-/* Advantages components classes */
 .ADVANT
   &__framedCard
     border: rgba(255, 255, 255, 0.3) 1px solid
@@ -64,14 +57,6 @@ body
     margin-bottom: 0.5em
   &__titleAligned
     margin: auto
-  &__btnImage
-    pointer-events: none
-  &__video
-    width: 100%
-    &_Center
-      text-align: center
-  &__videoWidth
-    max-width: 100%
 .MENU
   &__width
     min-width: 100px
@@ -89,3 +74,10 @@ body
   padding: 12px
   color: white
   background-color: rgba(0, 0, 0, .3)
+.about
+  &__list
+    display: block
+    text-align: center
+  &__item
+    display: inline-block
+    vertical-align: middle
