--- a/src/styles/mystyle.sass
+++ b/src/styles/mystyle.sass
@@ -7,6 +7,10 @@ html
   --_c:#0000 66%, #20222a 68% 70%, #0000 72%
   background: radial-gradient(var(--_g) 100% 25%, var(--_c)) var(--s) (var(--s) / var(--_s)), radial-gradient(var(--_g) 0 75%, var(--_c)) var(--s) (var(--s) / var(--_s)), radial-gradient(var(--_g) 100% 25%, var(--_c)) 0 (0 / var(--_s)), radial-gradient(var(--_g) 0 75%, var(--_c)) 0 (0 / var(--_s)), repeating-conic-gradient(var(--c) 0 25%, #0000 0 50%) 0 (0 / var(--_s)), radial-gradient(var(--_c)) 0 (calc(var(--s)/2) / var(--s)) var(--s) var(--c)
   background-attachment: fixed
+  
+@font-face 
+  font-family: 'Helvetica'
+  font-display: swap
 
 body
   min-width: 360px
