Pre-final fixes, reworks and improvements

--- a/src/styles/mystyle.sass
+++ b/src/styles/mystyle.sass
@@ -45,10 +45,6 @@ body
     max-width: 100%
     margin: auto
     padding: 1em
-/* Gallery classes */
-.AR
-  &__wide
-    aspect-ratio: 16/9
 /* Backgrounds */
 .BG
   &__cardDark
@@ -85,3 +81,5 @@ body
   &__item
     display: inline-block
     vertical-align: middle
+.noclick
+  pointer-events: none
